--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
